Agregación del CSS a la estructura html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Documento</title>
+    <link rel="stylesheet" href="css\modal.css">
+    <link rel="stylesheet" href="css\page.css">
 </head>
 
 <body>
     <section class="page-content">
         <h1 class="titulo">Notas</h1>
-        <article class="notas content">
+        <article class="notas-content">
             <button>Crear</button>
             <table>
                 <thead>
@@ -36,12 +38,12 @@
         <article class="promedio-content">
             <p>Supromedio es: 5</p>
             <br>
-            <h2>Felicitaciones aprobo</h2>
+            <h2>Felicitaciones aprobo la materia</h2>
         </article>
     </section>
     <section class="modal-content">
         <article class="form-content">
-            <button>X</button>
+            <button class="cerrar-btn">X</button>
             <h2>Crear / Modificar</h2>
             <form>
                 <div>
