Se agregaron estilos al formulario (modal)

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
             <h2>Felicitaciones aprobo la materia</h2>
         </article>
     </section>
-    <section class="modal-content">
+    <section class="modal-content close-modal">
         <article class="form-content">
             <button class="cerrar-btn">X</button>
             <h2>Crear / Modificar</h2>
             <form>
-                <div>
+                <div class="input-content mg-botton-16">
                     <label>Nombre de la actividad:</label>
                     <input type="text" name="actividad">
                 </div>
-                <div>
+                <div class="input-content mg-botton-16">
                     <label>Nota:</label>
                     <input type="number" name="nota">
                 </div>
-                <div>
+                <div class="button-content">
                     <button type="button">Aceptar</button>
                 </div>
             </form>
