--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="titulo">Notas</h1>
         <article class="notas-content">
             <button>Crear</button>
-            <table>
+            <table id="promediosTb">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -36,9 +36,9 @@
             </table>
         </article>
         <article class="promedio-content">
-            <p>Supromedio es: 5</p>
+            <p id="promedioText">Supromedio es: 5</p>
             <br>
-            <h2>Felicitaciones aprobo la materia</h2>
+            <h2 id="mensajeNota">Felicitaciones aprobo la materia</h2>
         </article>
     </section>
     <section class="modal-content close-modal">
@@ -61,6 +61,7 @@
         </article>
 
     </section>
+    <script src="js/promedios.js"></script>
 </body>
 
 </html>
